# taskflow

./: .gitignore  Makefile  README.md  pyproject.toml  sitecustomize.py
projects/test-project/: project.json
src/taskflow/: __main__.py  cli.py  enhanced_cli.py  manager.py  mcp_client_example.py  mcp_server.py  models.py  search_utils.py  server.py  storage.py  templates.py
web/: index.html
