[tool.uv]

[project]
name = "taskflow"
version = "0.1.0"
description = "Local-first task management for coding tasks with CLI, API, and minimal UI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Taskflow", email = "dev@example.com" }
]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "ruamel.yaml>=0.18.0",
  "websockets>=12.0"
]

[project.scripts]
taskflow = "taskflow.cli:main"
taskflow-server = "taskflow.server:main"
taskflow-mcp = "taskflow.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


